# TradingSystem

./: .claude-plugin  .clinerules  .cursorignore  .cursorrules-linux  .editorconfig  .env  .env.backup-20251020-175049  .env.backup-20251020-181122  .env.backup-20251020-194008  .env.backup-20251020-200510  .env.example  .env.local.example  .env.shared  .env.test  .envrc  .gitattributes  .gitignore  .gitmodules  .mcp.json  .service-tokens.json  .shellcheckrc  00-TELEGRAM-DEPLOYMENT-SUCCESS.md  =2.0.0  ABSOLUTE-FINAL-VICTORY.md  ACAO-IMEDIATA.md  AGENTS.md  AGENTS.md~HEAD  ANALISE-ARQUITETURA-PORTAS.md  ANALISE-ESTRUTURA-ENV.md  ANYTHINGLLM-VS-CUSTOM-RAG-2025-11-02.md  API-INTEGRATION-STATUS.md  API-PERFORMANCE-OPTIMIZATION-FINAL-2025-11-02.md  APPLY-CRITICAL-FIXES.sh  APPS-CONTAINERS-FIXED.md  APPS-DOCS-ORGANIZATION-2025-10-27.md  ARCHITECTURE-REVIEW-TELEGRAM-GATEWAY-2025-11-02.md  AUDIT-RESULTS.md  AUDIT-START-STOP-COMMANDS.md  AUTENTICAR-TELEGRAM.sh  BOTAO-PLAY-INTELIGENTE.md  (+275 more)
tools/agno-agents/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
tools/agno-agents/src/: config.py  main.py
tools/agno-agents/src/application/: dto.py  ports.py
tools/agno-agents/src/domain/: entities.py  value_objects.py
tools/agno-agents/src/infrastructure/adapters/: __init__.py  b3_client.py  b3_websocket_consumer.py  tp_capital_client.py
tools/agno-agents/src/interfaces/: routes.py
tools/agno-agents/src/interfaces/agents/: __init__.py  docs_daily.py  market_analysis.py  (+1 more)
tools/agno-agents/tests/: conftest.py  test_adapters.py  test_agents.py  test_domain.py
(+5887 files in other folders)
